# models.py
@@ -1,0 +1,19 @@
+from datetime import datetime
+from config import db, ma
+
+
+class Person(db.Model):
+    __tablename__ = 'person'
+    person_id = db.Column(db.Integer, primary_key=True)
+    fname = db.Column(db.String(32), index=True)
+    lname = db.Column(db.String(32))
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow(), onupdate=datetime.utcnow())
+
+
+class PersonSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Person
+        # sqla_session = db.session
+        include_relationships = True
+        load_instance = True
+
